ocpv412/quarkus-jvm-demo/quarkus-book-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: quarkus-book
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"StatefulSet","name":"postgres"}]'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"quarkus-book:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"quarkus-book\")].image"}]
  labels:
    app: quarkus-book
    app.kubernetes.io/component: quarkus-book
    app.kubernetes.io/instance: quarkus-book
    app.kubernetes.io/name: quarkus
    app.kubernetes.io/part-of: quarkus-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-book
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: "*"
      labels:
        app: quarkus-book
    spec:
      containers:
        - name: quarkus-book
          image: quarkus-book:latest
          securityContext:
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
