ocpv412/quarkus-jvm-demo/quarkus-proxy-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: quarkus-proxy
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"quarkus-book"}]'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"quarkus-proxy:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"quarkus-proxy\")].image"}]
  labels:
    app: quarkus-proxy
    app.kubernetes.io/component: quarkus-proxy
    app.kubernetes.io/instance: quarkus-proxy
    app.kubernetes.io/name: quarkus
    app.kubernetes.io/part-of: quarkus-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-proxy
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: "*"
      labels:
        app: quarkus-proxy
    spec:
      containers:
        - name: quarkus-proxy
          image: quarkus-proxy:latest
          securityContext:
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
