ocpv412/quarkus-jvm-demo/quarkus-proxy-deployment-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: quarkus-proxy
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: quarkus-proxy
